--- a/config.toml
+++ b/config.toml
@@ -47,7 +47,7 @@ enableEmoji = true  # Shorthand emojis in content files - https://gohugo.io/func
   # Check https://github.com/Track3/hermit#social-icons for more info.
   [[params.social]]
     name = "email"
-    url = "hello@mjung.net"
+    url = "mailto:hello@mjung.net"
 
   [[params.social]]
     name = "linkedin"
